# multi-deployment-controller

./: Cargo.toml  LICENSE  README.md  flake.nix  package.nix  rust-toolchain.toml
src/: controller.rs  crd.rs  lib.rs  main.rs  types.rs  utils.rs
