[package]
name = "multi-deployment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
schemars = "1.0.5"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
