[package]
name = "multi-deployment-controller"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[[bin]]
name = "examplegen"
path = "src/bin/examplegen.rs"

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
json-patch = "4.1.0"
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
schemars = "1.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
